# Job-management-system

./: CMakeLists.txt  README.md  boss.cpp  boss.h  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  worker.h  workerManager.cpp  workerManager.h
