cmake_minimum_required(VERSION 3.27)
project(exercise2__)

set(CMAKE_CXX_STANDARD 11)

add_executable(exercise2__ main.cpp
        workerManager.h
        workerManager.h
        workerManager.cpp
        worker.h
        employee.cpp
        employee.h
        manager.cpp
        manager.h
        boss.cpp
        boss.h)
